--- a/src/main/resources/templates/admin/answers.html
+++ b/src/main/resources/templates/admin/answers.html
@@ -2,26 +2,27 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
-<head lang="en">
+<head>
 <title>Answers</title>
+<meta charset="UTF-8" />
 </head>
 <body>
 	<div layout:fragment="content" class="container">
 		<h4>
-			<a th:text="Home" href="home" th:href="@{/home}"></a> -> <a
-				th:text="Quests" href="quest/add" th:href="@{/quest/add}"></a> -> <a
-				th:text="${quest.name}"
+			<a th:text="#{home}" href="home" th:href="@{/home}"></a> -> <a
+				th:text="#{quests}" href="quest/add" th:href="@{/quest/add}"></a> ->
+			<a th:text="${quest.name}"
 				th:href="@{/quest/{id}/questions(id=${quest.id})}"></a> -> <span
 				th:text="${question.value}"></span>
 		</h4>
 		<div class="container">
-			<h2>Answer Form</h2>
+			<h2 th:text="#{answer_form}"></h2>
 			<form class="form-horizontal" th:object="${answerForm}"
 				th:action="@{/quest/{id}/question/{questionId}/answers(id=${quest.id}, questionId=${question.id})}"
 				method="post">
 				<input type="hidden" th:field="*{id}" />
 				<div class="form-group">
-					<label class="col-sm-2 control-label">Value:</label>
+					<label class="col-sm-2 control-label" th:text="#{value} + ':'"></label>
 					<div class="col-sm-10">
 						<textarea class="form-control" th:field="*{value}"
 							required="required" autofocus="autofocus"></textarea>
@@ -31,7 +32,7 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<label class="col-sm-2 control-label">Valid:</label>
+					<label class="col-sm-2 control-label" th:text="#{valid} + ':'"></label>
 					<div class="col-sm-10">
 						<input type="checkbox" class="form-control" th:field="*{valid}" />
 						<p class="label label-danger"
@@ -40,7 +41,7 @@
 					</div>
 				</div>
 				<div>
-					<button type="submit" class="btn btn-primary">Submit</button>
+					<button type="submit" class="btn btn-primary" th:text="#{submit}"></button>
 				</div>
 			</form>
 		</div>
@@ -49,8 +50,8 @@
 			<table class="table table-striped table-condensed">
 				<thead>
 					<tr>
-						<th>Value</th>
-						<th>Valid</th>
+						<th th:text="#{value}"></th>
+						<th th:text="#{valid}"></th>
 						<th></th>
 					</tr>
 				</thead>
@@ -61,7 +62,8 @@
 						<td th:text="${answer.valid}"></td>
 						<td><a
 							th:href="@{/quest/{id}/question/{questionId}/answer/{answerId}/delete(id=${quest.id}, questionId=${question.id}, answerId=${answer.id})}"
-							onclick="return confirm('Are you sure you want to delete\nanswer?');">Delete</a></td>
+							onclick="return confirm('Are you sure you want to delete\nanswer?');"
+							th:text="#{delete}"></a></td>
 					</tr>
 				</tbody>
 			</table>
