--- a/src/main/resources/templates/admin/lectures.html
+++ b/src/main/resources/templates/admin/lectures.html
@@ -2,18 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
-<head lang="en">
-<title>Lectures Form</title>
+<head>
+<title th:text="#{lectures}"></title>
+<meta charset="UTF-8" />
 </head>
 <body>
 	<div layout:fragment="content" class="container">
 		<div class="container" th:unless="${#lists.isEmpty(lectures)}">
-			<h2>Lectures Form</h2>
+			<h2 th:text="#{lectures}"></h2>
 			<table class="table table-striped table-condensed">
 				<thead>
 					<tr>
-						<th>Name</th>
-						<th>Description</th>
+						<th th:text="#{name}"></th>
+						<th th:text="#{description}"></th>
 						<th></th>
 					</tr>
 				</thead>
@@ -21,20 +22,21 @@
 					<tr th:each="lecture : ${lectures}">
 						<td><a th:text="${lecture.name}"
 							th:href="@{'/lecture/' + ${lecture.id + '/edit'}}"></a></td>
-						<td th:text="${lecture.description}">Description</td>
+						<td th:text="${lecture.description}"></td>
 						<td><a th:href="@{'/lecture/' + ${lecture.id + '/delete/'}}"
-							onclick="return confirm('Are you sure you want to delete\nlecture?');">Delete</a></td>
+							onclick="return confirm('Are you sure you want to delete\nlecture?');"
+							th:text="#{delete}"></a></td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
 		<div class="container">
-			<h2>Lecture Form</h2>
+			<h2 th:text="#{lecture_form}"></h2>
 			<form class="form-horizontal" th:object="${lectureForm}"
 				th:action="@{/lecture/add}" method="post">
 				<input type="hidden" th:field="*{id}" />
 				<div class="form-group">
-					<label class="col-sm-2 control-label">Name:</label>
+					<label class="col-sm-2 control-label" th:text="#{name} + ':'"></label>
 					<div class="col-sm-10">
 						<input type="text" class="form-control" th:field="*{name}"
 							required="required" autofocus="autofocus" />
@@ -43,7 +45,8 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<label class="col-sm-2 control-label">Description:</label>
+					<label class="col-sm-2 control-label"
+						th:text="#{description} + ':'"></label>
 					<div class="col-sm-10">
 						<input type="text" class="form-control" th:field="*{description}"
 							required="required" />
@@ -53,7 +56,7 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<label class="col-sm-2 control-label">Value:</label>
+					<label class="col-sm-2 control-label" th:text="#{value} + ':'"></label>
 					<div class="col-sm-10">
 						<textarea class="form-control" th:field="*{value}"
 							required="required"></textarea>
@@ -63,7 +66,7 @@
 					</div>
 				</div>
 				<div>
-					<button type="submit" class="btn btn-primary">Submit</button>
+					<button type="submit" class="btn btn-primary" th:text="#{submit}"></button>
 				</div>
 			</form>
 		</div>
