--- a/src/main/resources/templates/admin/questions.html
+++ b/src/main/resources/templates/admin/questions.html
@@ -2,23 +2,24 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
-<head lang="en">
+<head>
 <title>Questions</title>
+<meta charset="UTF-8" />
 </head>
 <body>
 	<div layout:fragment="content" class="container">
 		<h4>
-			<a th:text="Home" th:href="@{/home}" href="/"></a> -> <a
+			<a th:text="#{home}" th:href="@{/home}" href="/"></a> -> <a
 				th:text="${quest.name}" th:href="@{/quest/add}" href="quest/add"></a>
 		</h4>
 		<div class="container">
-			<h2>Question Form</h2>
+			<h2 th:text="#{question_form}"></h2>
 			<form class="form-horizontal" th:object="${questionForm}"
 				th:action="@{/quest/{id}/questions(id=${quest.id})}" method="post">
 				<input type="hidden" th:field="*{id}" /> <input type="hidden"
 					th:field="*{answers}" />
 				<div class="form-group">
-					<label class="col-sm-2 control-label">Value:</label>
+					<label class="col-sm-2 control-label" th:text="#{value} + ':'"></label>
 					<div class="col-sm-10">
 						<textarea class="form-control" th:field="*{value}"
 							required="required" autofocus="autofocus"></textarea>
@@ -28,7 +29,8 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<label class="col-sm-2 control-label">Valid answers count:</label>
+					<label class="col-sm-2 control-label"
+						th:text="#{valid_answers_count} + ':'"></label>
 					<div class="col-sm-10">
 						<input type="text" class="form-control" value="1"
 							th:field="*{validAnswersCount}" required="required" />
@@ -38,17 +40,17 @@
 					</div>
 				</div>
 				<div>
-					<button type="submit" class="btn btn-primary">Submit</button>
+					<button type="submit" class="btn btn-primary" th:text="#{submit}"></button>
 				</div>
 			</form>
 		</div>
 		<div class="container" th:unless="${#lists.isEmpty(questions)}">
-			<h2>Questions</h2>
+			<h2 th:text="#{questions}"></h2>
 			<table class="table table-striped table-condensed">
 				<thead>
 					<tr>
-						<th>Value</th>
-						<th>Answers count</th>
+						<th th:text="#{value}"></th>
+						<th th:text="#{answers_count}"></th>
 						<th></th>
 						<th></th>
 					</tr>
@@ -59,10 +61,11 @@
 							th:href="@{/quest/{id}/question/{questionId}/edit(id=${quest.id}, questionId=${question.id})}"></a></td>
 						<td th:text="${question.getAnswers().size()}"></td>
 						<td><a
-							th:href="@{/quest/{id}/question/{questionId}/answers(id=${quest.id}, questionId=${question.id})}">Answers</a></td>
+							th:href="@{/quest/{id}/question/{questionId}/answers(id=${quest.id}, questionId=${question.id})}"></a></td>
 						<td><a
 							th:href="@{/quest/{id}/question/{questionId}/delete(id=${quest.id}, questionId=${question.id})}"
-							onclick="return confirm('Are you sure you want to delete\nquestion?');">Delete</a></td>
+							onclick="return confirm('Are you sure you want to delete\nquestion?');"
+							th:text="#{delete}"></a></td>
 					</tr>
 				</tbody>
 			</table>
