--- a/src/main/resources/templates/admin/quests.html
+++ b/src/main/resources/templates/admin/quests.html
@@ -2,18 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
-<head lang="en">
+<head>
 <title>Quests Form</title>
+<meta charset="UTF-8" />
 </head>
 <body>
 	<div layout:fragment="content" class="container">
 		<div class="container" th:unless="${#lists.isEmpty(quests)}">
-			<h2>Quests</h2>
+			<h2 th:text="#{quests}"></h2>
 			<table class="table table-striped table-condensed">
 				<thead>
 					<tr>
-						<th>Name</th>
-						<th>Description</th>
+						<th th:text="#{name}"></th>
+						<th th:text="#{description}"></th>
 						<th></th>
 						<th></th>
 					</tr>
@@ -22,22 +23,23 @@
 					<tr th:each="quest : ${quests}">
 						<td><a th:text="${quest.name}"
 							th:href="@{'/quest/' + ${quest.id + '/edit'}}"></a></td>
-						<td th:text="${quest.description}">Description</td>
-						<td><a th:href="@{'/quest/' + ${quest.id + '/questions'}}">Questions</a></td>
+						<td th:text="${quest.description}"></td>
+						<td><a th:href="@{'/quest/' + ${quest.id + '/questions'}}"></a></td>
 						<td><a th:href="@{'/quest/' + ${quest.id + '/delete/'}}"
-							onclick="return confirm('Are you sure you want to delete\nquest?');">Delete</a></td>
+							onclick="return confirm('Are you sure you want to delete\nquest?');"
+							th:text="#{delete}"></a></td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
 		<div class="container">
-			<h2>Quest Form</h2>
+			<h2 th:text="#{quest_form}"></h2>
 			<form class="form-horizontal" th:object="${questForm}"
 				th:action="@{/quest/add}" method="post">
 				<input type="hidden" th:field="*{id}" /><input type="hidden"
 					th:field="*{questions}" />
 				<div class="form-group">
-					<label class="col-sm-2 control-label">Name:</label>
+					<label class="col-sm-2 control-label" th:text="#{name} + ':'"></label>
 					<div class="col-sm-10">
 						<input type="text" class="form-control" th:field="*{name}"
 							required="required" autofocus="autofocus" />
@@ -46,7 +48,8 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<label class="col-sm-2 control-label">Description:</label>
+					<label class="col-sm-2 control-label"
+						th:text="#{description} + ':'"></label>
 					<div class="col-sm-10">
 						<input type="text" class="form-control" th:field="*{description}"
 							required="required" />
@@ -56,7 +59,7 @@
 					</div>
 				</div>
 				<div>
-					<button type="submit" class="btn btn-primary">Submit</button>
+					<button type="submit" class="btn btn-primary" th:text="#{submit}"></button>
 				</div>
 			</form>
 		</div>
