--- a/src/main/resources/templates/admin/questions.html
+++ b/src/main/resources/templates/admin/questions.html
@@ -3,7 +3,7 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-<title>Questions</title>
+<title th:text="#{questions}"></title>
 <meta charset="UTF-8" />
 </head>
 <body>
@@ -12,6 +12,33 @@
 			<a th:text="#{home}" th:href="@{/home}" href="/"></a> -> <a
 				th:text="${quest.name}" th:href="@{/quest/add}" href="quest/add"></a>
 		</h4>
+		<div class="container" th:unless="${#lists.isEmpty(questions)}">
+			<h2 th:text="#{questions}"></h2>
+			<table class="table table-striped table-condensed">
+				<thead>
+					<tr>
+						<th th:text="#{value}"></th>
+						<th th:text="#{answers_count}"></th>
+						<th></th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="question : *{questions}">
+						<td><a th:text="${question.value}"
+							th:href="@{/quest/{id}/question/{questionId}/edit(id=${quest.id}, questionId=${question.id})}"></a></td>
+						<td th:text="${question.getAnswers().size()}"></td>
+						<td><a
+							th:href="@{/quest/{id}/question/{questionId}/answers(id=${quest.id}, questionId=${question.id})}"
+							th:text="#{answers}"></a></td>
+						<td><a
+							th:href="@{/quest/{id}/question/{questionId}/delete(id=${quest.id}, questionId=${question.id})}"
+							onclick="return confirm('Are you sure you want to delete\nquestion?');"
+							th:text="#{delete}"></a></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 		<div class="container">
 			<h2 th:text="#{question_form}"></h2>
 			<form class="form-horizontal" th:object="${questionForm}"
@@ -43,32 +70,6 @@
 					<button type="submit" class="btn btn-primary" th:text="#{submit}"></button>
 				</div>
 			</form>
-		</div>
-		<div class="container" th:unless="${#lists.isEmpty(questions)}">
-			<h2 th:text="#{questions}"></h2>
-			<table class="table table-striped table-condensed">
-				<thead>
-					<tr>
-						<th th:text="#{value}"></th>
-						<th th:text="#{answers_count}"></th>
-						<th></th>
-						<th></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="question : *{questions}">
-						<td><a th:text="${question.value}"
-							th:href="@{/quest/{id}/question/{questionId}/edit(id=${quest.id}, questionId=${question.id})}"></a></td>
-						<td th:text="${question.getAnswers().size()}"></td>
-						<td><a
-							th:href="@{/quest/{id}/question/{questionId}/answers(id=${quest.id}, questionId=${question.id})}"></a></td>
-						<td><a
-							th:href="@{/quest/{id}/question/{questionId}/delete(id=${quest.id}, questionId=${question.id})}"
-							onclick="return confirm('Are you sure you want to delete\nquestion?');"
-							th:text="#{delete}"></a></td>
-					</tr>
-				</tbody>
-			</table>
 		</div>
 	</div>
 </body>
