--- a/src/main/resources/templates/user/reset-password-change.html
+++ b/src/main/resources/templates/user/reset-password-change.html
@@ -3,15 +3,15 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-<title>Password Change</title>
-</head>
+<title th:text="#{change_password}"></title>
+<meta charset="UTF-8" />
 <body>
 	<div layout:fragment="content">
 		<form class="form-signin" th:action="@{/user/reset-password-change}"
 			th:object="${users}" action="/user/reset-password-change"
 			method="post">
-			<h4 class="form-signin-heading">Please enter your new desired
-				password</h4>
+			<h4 class="form-signin-heading"
+				th:text="#{please_enter_your_new_password}"></h4>
 
 			<div th:if="${#fields.hasErrors()}" class="alert alert-danger">
 				<div th:if="${#fields.hasErrors('activation')}"
@@ -23,8 +23,8 @@
 				type="password" id="inputPassword" name="password"
 				class="form-control" placeholder="New Password" required="required" />
 
-			<button class="btn btn-lg btn-primary btn-block" type="submit">Reset
-				Password</button>
+			<button class="btn btn-lg btn-primary btn-block" type="submit"
+				th:text="#{reset_password}"></button>
 		</form>
 	</div>
 </body>
