--- a/src/main/resources/templates/user/reset-password-sent.html
+++ b/src/main/resources/templates/user/reset-password-sent.html
@@ -3,14 +3,14 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-<title>Password Reset</title>
+<title th:text="#{reset_password}"></title>
+<meta charset="UTF-8" />
 </head>
 <body>
 	<div layout:fragment="content">
 		<div class="alert alert-info">
-			<p>Password reset link was just sent to your inbox.</p>
-			<p>Please check your email for instructions on how to reset your
-				password.</p>
+			<p th:text="#{reset_link_was_sent}"></p>
+			<p th:text="#{please_check_your_email_for_reset}"></p>
 		</div>
 	</div>
 </body>
