--- a/src/main/resources/templates/user/reset-password.html
+++ b/src/main/resources/templates/user/reset-password.html
@@ -3,13 +3,14 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-<title>Password Reset</title>
+<title th:text="#{reset_password}"></title>
+<meta charset="UTF-8" />
 </head>
 <body>
 	<div layout:fragment="content">
 		<form class="form-signin" th:action="@{/user/reset-password}"
 			th:object="${users}" action="/user/reset-password" method="post">
-			<h2 class="form-signin-heading">Password Reset</h2>
+			<h2 class="form-signin-heading" th:text="#{reset_password}"></h2>
 
 			<div class="alert alert-danger" th:if="${#fields.hasErrors('email')}"
 				th:errors="*{email}">Email error</div>
@@ -17,8 +18,8 @@
 			<input type="email" id="inputEmail" name="email" class="form-control"
 				placeholder="Email" required="required" autofocus="autofocus" />
 
-			<button class="btn btn-lg btn-primary btn-block" type="submit">Reset
-				Password</button>
+			<button class="btn btn-lg btn-primary btn-block" type="submit"
+				th:text="#{reset_password}"></button>
 		</form>
 	</div>
 </body>
