--- a/src/main/resources/templates/lecture/lectures.html
+++ b/src/main/resources/templates/lecture/lectures.html
@@ -2,25 +2,26 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
-<head lang="en">
-<title>Lectures</title>
+<head>
+<title th:text="#{lectures}"></title>
+<meta charset="UTF-8" />
 </head>
 <body>
 	<div layout:fragment="content" class="container">
 		<div class="container" th:unless="${#lists.isEmpty(lectures)}">
-			<h2>Lectures</h2>
+			<h2 th:text="#{lectures}"></h2>
 			<table class="table table-striped table-condensed">
 				<thead>
 					<tr>
-						<th>Name</th>
-						<th>Description</th>
+						<th th:text="#{name}"></th>
+						<th th:text="#{description}"></th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr th:each="lecture : ${lectures}">
 						<td><a th:text="${lecture.name}"
 							th:href="@{'/lecture/' + ${lecture.id}}"></a></td>
-						<td th:text="${lecture.description}">Description</td>
+						<td th:text="${lecture.description}"></td>
 					</tr>
 				</tbody>
 			</table>
