--- a/src/main/resources/templates/quiz/quests.html
+++ b/src/main/resources/templates/quiz/quests.html
@@ -2,8 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
-<head lang="en">
-<title>Quizzes</title>
+<head>
+<title th:text="#{quests}"></title>
+<meta charset="UTF-8" />
 </head>
 <body>
 	<div layout:fragment="content" class="container">
@@ -12,15 +13,15 @@
 			<table class="table table-striped table-condensed">
 				<thead>
 					<tr>
-						<th>Name</th>
-						<th>Description</th>
+						<th th:text="#{name}"></th>
+						<th th:text="#{description}"></th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr th:each="quest : ${quests}">
 						<td><a th:text="${quest.name}"
 							th:href="@{'/quiz/' + ${quest.id} + '/question/0'}"></a></td>
-						<td th:text="${quest.description}">Description</td>
+						<td th:text="${quest.description}"></td>
 					</tr>
 				</tbody>
 			</table>
