--- a/src/main/resources/templates/quiz/result.html
+++ b/src/main/resources/templates/quiz/result.html
@@ -2,14 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
-<head lang="en">
-<title>Result</title>
+<head>
+<title th:text="#{result}"></title>
+<meta charset="UTF-8" />
 </head>
 <body>
 	<div layout:fragment="content" class="container">
 		<div class="container">
 			<h2 th:text="${message}"></h2>
-			<h2>Correct answers:</h2>
+			<h2 th:text="#{correct_answers} + ':'"></h2>
 			<div class="container" th:each="question : ${questions}">
 				<div>
 					<h2 class="text-success"
