--- a/src/main/resources/templates/quiz/results.html
+++ b/src/main/resources/templates/quiz/results.html
@@ -2,13 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
-<head lang="en">
-<title>Results</title>
+<head>
+<title th:text="#{results}"></title>
+<meta charset="UTF-8" />
 </head>
 <body>
 	<div layout:fragment="content" class="container">
 		<div class="container" th:unless="${#lists.isEmpty(results)}">
-			<h2>Quizzes</h2>
+			<h2 th:text="#{quests}"></h2>
 			<table class="table table-striped table-condensed">
 				<thead>
 					<tr>
