--- a/src/main/resources/templates/user/activation-send.html
+++ b/src/main/resources/templates/user/activation-send.html
@@ -3,13 +3,14 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-<title>Re-send Activation</title>
+<title th:text="#{resend_activation}"></title>
+<meta charset="UTF-8" />
 </head>
 <body>
 	<div layout:fragment="content">
 		<form class="form-signin" th:action="@{/user/activation-send}"
 			th:object="${users}" action="/user/activation-send" method="post">
-			<h2 class="form-signin-heading">Re-send Activation</h2>
+			<h2 class="form-signin-heading" th:text="#{resend_activation}"></h2>
 
 			<div class="alert alert-danger" th:if="${#fields.hasErrors('email')}"
 				th:errors="*{email}">Email error</div>
@@ -17,8 +18,8 @@
 			<input type="email" id="inputEmail" name="email" class="form-control"
 				placeholder="Email" required="required" autofocus="autofocus" />
 
-			<button class="btn btn-lg btn-primary btn-block" type="submit">Send
-				Activation</button>
+			<button class="btn btn-lg btn-primary btn-block" type="submit"
+				th:text="send_activation"></button>
 		</form>
 	</div>
 </body>
