--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -3,13 +3,14 @@
 	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	layout:decorator="layout">
 <head>
-<title>REGISTER</title>
+<title th:text="${register}"></title>
+<meta charset="UTF-8" />
 </head>
 <body>
 	<div layout:fragment="content">
 		<form class="form-signin" th:action="@{/user/register}"
 			th:object="${users}" action="/user/register" method="post">
-			<h2 class="form-signin-heading">Please register</h2>
+			<h2 class="form-signin-heading" th:text="#{please_register}"></h2>
 
 			<div th:if="${#fields.hasErrors()}" class="alert alert-danger">
 				<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email
@@ -21,14 +22,16 @@
 			</div>
 
 			<input type="text" id="inputEmail" name="email"
-				class="form-control top" placeholder="Email" required="required"
+				class="form-control top" placeholder="#{email}" required="required"
 				autofocus="autofocus" /> <input type="text" id="inputUser"
-				name="username" class="form-control middle" placeholder="Username"
-				required="required" /> <input type="password" id="inputPassword"
-				name="password" class="form-control bottom" placeholder="Password"
+				name="username" class="form-control middle"
+				placeholder="#{username}" required="required" /> <input
+				type="password" id="inputPassword" name="password"
+				class="form-control bottom" placeholder="#{password}"
 				required="required" />
 
-			<button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+			<button class="btn btn-lg btn-primary btn-block" type="submit"
+				th:text="#{register}"></button>
 		</form>
 	</div>
 </body>
