--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -22,12 +22,12 @@
 			</div>
 
 			<input type="text" id="inputEmail" name="email"
-				class="form-control top" placeholder="#{email}" required="required"
-				autofocus="autofocus" /> <input type="text" id="inputUser"
-				name="username" class="form-control middle"
-				placeholder="#{username}" required="required" /> <input
+				class="form-control top" th:placeholder="#{email}"
+				required="required" autofocus="autofocus" /> <input type="text"
+				id="inputUser" name="username" class="form-control middle"
+				th:placeholder="#{username}" required="required" /> <input
 				type="password" id="inputPassword" name="password"
-				class="form-control bottom" placeholder="#{password}"
+				class="form-control bottom" th:placeholder="#{password}"
 				required="required" />
 
 			<button class="btn btn-lg btn-primary btn-block" type="submit"
