--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -17,7 +17,7 @@
 				th:text="#{email_and_password_are_incorrect}"></div>
 			<input type="text" id="inputEmail" name="username"
 				class="form-control top"
-				th:placeholder="#{username} + ' or ' + #{email}" required="required"
+				th:placeholder="#{username} + ' ' + #{or} + ' ' + #{email}" required="required"
 				autofocus="autofocus" /> <input type="password" id="inputPassword"
 				name="password" class="form-control bottom"
 				th:placeholder="#{password}" required="required" />
