--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -17,9 +17,9 @@
 				th:text="#{email_and_password_are_incorrect}"></div>
 			<input type="text" id="inputEmail" name="username"
 				class="form-control top"
-				th:placeholder="#{username} + ' ' + #{or} + ' ' + #{email}" required="required"
-				autofocus="autofocus" /> <input type="password" id="inputPassword"
-				name="password" class="form-control bottom"
+				th:placeholder="#{username} + ' ' + #{or} + ' ' + #{email}"
+				required="required" autofocus="autofocus" /> <input type="password"
+				id="inputPassword" name="password" class="form-control bottom"
 				th:placeholder="#{password}" required="required" />
 			<div class="checkbox">
 				<label> <input type="checkbox" name="remember-me"
