--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -21,7 +21,7 @@
 						<th th:text="#{last_login}"></th>
 						<th th:if="${g_user.isAdmin()}" th:text="#{delete}"></th>
 						<th th:if="${g_user.isAdmin()}" th:text="#{edit}"></th>
-						<th th:if="${g_user.isAdmin()}" th:text="#{login_as}"></th>
+						<th th:if="${g_user.isAdmin()}"></th>
 					</tr>
 				</thead>
 				<tbody>
