--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -66,6 +66,9 @@
 					</button>
 				</p>
 
+				<input id="ua" type="submit" onclick="home?lang=ua">sdfsdf</input>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+				<input id="en" type="submit" onclick="home?lang=en">sdfsdf</input>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+
 				<div id="styled" layout:fragment="content" class="content-fragment">
 					<!-- CONTENT GOES HERE -->
 				</div>
