--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -154,3 +154,17 @@ footer {
 	white-space: pre-wrap;
 	word-break: keep-all;
 }
+
+#ua {
+	background-image: ua.png;
+	font-size: 0;
+	width: 50px;
+	height: 50px;
+}
+
+#en {
+	background-image: en.png;
+	font-size: 0;
+	width: 50px;
+	height: 50px;
+}
