--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -156,14 +156,14 @@ footer {
 }
 
 #ua {
-	background-image: ua.png;
+	background-image: /resources/images/ua.png;
 	font-size: 0;
 	width: 50px;
 	height: 50px;
 }
 
 #en {
-	background-image: en.png;
+	background-image: /resources/images/en.png;
 	font-size: 0;
 	width: 50px;
 	height: 50px;
