--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -66,8 +66,8 @@
 					</button>
 				</p>
 
-				<a id="ua" href="home/?lang=ua"></a>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
-				<a id="en" href="home/?lang=en"></a>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+				<input id="ua" type="submit" th:onclick="@{/home/?lang=ua}"></input>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
+				<input id="en" type="submit" th:onclick="@{/home/?lang=en}"></input>​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​​
 
 				<div id="styled" layout:fragment="content" class="content-fragment">
 					<!-- CONTENT GOES HERE -->
