--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -23,7 +23,7 @@
 					<li><a th:href="@{/}" href="/" th:text="#{home}"></a></li>
 					<li><a th:href="@{/quiz/quests}" href="/quiz/quests"
 						th:text="#{quests}"></a></li>
-					<li><a th:href="@{/lecture/lectures}"
+					<li><a th:href="@{/tutorial/lectures}"
 						href="/tutorial/lectures" th:text="#{lectures}"></a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
