--- a/src/main/resources/templates/fragments/headerinc.html
+++ b/src/main/resources/templates/fragments/headerinc.html
@@ -14,7 +14,7 @@
 <link href="/css/sticky-footer.css" rel="stylesheet"
 	th:href="@{/css/sticky-footer.css}" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-	rel="stylesheet">
+	rel="stylesheet" />
 <script src="/webjars/jquery/1.12.4/jquery.min.js"
 	th:src="@{/webjars/jquery/1.12.4/jquery.min.js}"></script>
 <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"
