--- a/src/main/resources/templates/fragments/headerinc.html
+++ b/src/main/resources/templates/fragments/headerinc.html
@@ -2,23 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en" th:fragment="head">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="viewport"
-	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 
-<link href="/css/styles.css" th:href="@{/css/styles.css}"
-	rel="stylesheet" />
-<link href="/webjars/bootstrap/3.3.6/css/bootstrap.min.css"
-	th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}"
-	media="screen" rel="stylesheet" />
-<link href="/css/sticky-footer.css" rel="stylesheet"
-	th:href="@{/css/sticky-footer.css}" />
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-	rel="stylesheet" />
-<script src="/webjars/jquery/1.12.4/jquery.min.js"
-	th:src="@{/webjars/jquery/1.12.4/jquery.min.js}"></script>
-<script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"
-	th:src="@{/webjars/bootstrap/3.3.6/js/bootstrap.min.js}"></script>
+<link href="/css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
+<link href="/webjars/bootstrap/3.3.6/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}" media="screen" rel="stylesheet" />
+<link href="/css/sticky-footer.css" rel="stylesheet" th:href="@{/css/sticky-footer.css}" />
+<script src="/webjars/jquery/1.12.4/jquery.min.js" th:src="@{/webjars/jquery/1.12.4/jquery.min.js}"></script>
+<script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js" th:src="@{/webjars/bootstrap/3.3.6/js/bootstrap.min.js}"></script>
 <script src="/js/app.js" th:src="@{/js/app.js}"></script>
 </head>
 <body>
