--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -20,7 +20,8 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar">
-					<li><a th:href="@{/}" href="/" th:text="#{home}"></a></li>
+					<li><a th:href="@{/}" href="/"><span
+							class="glyphicon glyphicon-home"></span></a></li>
 					<li><a th:href="@{/quiz/quests}" href="/quiz/quests"
 						th:text="#{quests}"></a></li>
 					<li><a th:href="@{/tutorial/lectures}"
@@ -28,7 +29,8 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown"><a class="dropdown-toggle"
-						data-toggle="dropdown" href="#"><span class="language"></span></a>
+						data-toggle="dropdown" href="#"><span
+							class="glyphicon glyphicon-globe"></span></a>
 						<ul class="dropdown-menu">
 							<li><a th:href="@{/?lang=ua}" href="/?lang=ua"
 								th:text="#{ukrainian}"></a></li>
