--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -32,9 +32,9 @@
 						data-toggle="dropdown" href="#"><span
 							class="glyphicon glyphicon-globe"></span></a>
 						<ul class="dropdown-menu">
-							<li><a th:href="@{/?lang=ua}" href="/?lang=ua"
+							<li><a th:href="@{/home/?lang=ua}" href="home/?lang=ua"
 								th:text="#{ukrainian}"></a></li>
-							<li><a th:href="@{/?lang=en}" href="/?lang=en"
+							<li><a th:href="@{/home/?lang=en}" href="home/?lang=en"
 								th:text="#{english}"></a></li>
 						</ul></li>
 					<li class="dropdown"><a class="dropdown-toggle"
