--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -32,10 +32,12 @@
 						data-toggle="dropdown" href="#"><span
 							class="glyphicon glyphicon-globe"></span></a>
 						<ul class="dropdown-menu">
-							<li><a th:href="@{/home/?lang=ua}" href="home/?lang=ua"
-								th:text="#{ukrainian}"></a></li>
-							<li><a th:href="@{/home/?lang=en}" href="home/?lang=en"
-								th:text="#{english}"></a></li>
+							<li><a
+								th:href="@{${#httpServletRequest.pathInfo} + '?lang=ua'}"
+								href="?lang=ua" th:text="#{ukrainian}"></a></li>
+							<li><a
+								th:href="@{${#httpServletRequest.pathInfo} + '?lang=en'}"
+								href="?lang=en" th:text="#{english}"></a></li>
 						</ul></li>
 					<li class="dropdown"><a class="dropdown-toggle"
 						data-toggle="dropdown" href="#"><span
