--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -35,8 +35,9 @@
 							<li><a
 								th:href="@{${#httpServletRequest.requestURI}(lang='ua')}"
 								href="?lang=ua" th:text="#{ukrainian}"></a></li>
-							<li><a th:href="@{/(lang='en')}" href="?lang=en"
-								th:text="#{english}"></a></li>
+							<li><a
+								th:href="@{${#httpServletRequest.requestURI}(lang='en')}"
+								href="?lang=en" th:text="#{english}"></a></li>
 						</ul></li>
 					<li class="dropdown"><a class="dropdown-toggle"
 						data-toggle="dropdown" href="#"><span
