--- a/src/main/resources/templates/quiz/question.html
+++ b/src/main/resources/templates/quiz/question.html
@@ -24,7 +24,7 @@
 			</div>
 			<div id="styled">
 				<h2
-					th:text="'Question ' + ${questionNumber} + '/' + ${questionsCount} + ':'"></h2>
+					th:text="#{question} + ' ' + ${questionNumber} + '/' + ${questionsCount} + ':'"></h2>
 				<pre th:text="${question}"></pre>
 				<form class="form-horizontal" th:object="${answerForm}"
 					th:action="@{'/quiz/' + ${quest.id} + '/question/' + ${questionNumber}}"
