--- a/src/main/resources/templates/lecture/lectures.html
+++ b/src/main/resources/templates/lecture/lectures.html
@@ -20,7 +20,7 @@
 				<tbody>
 					<tr th:each="lecture : ${lectures}">
 						<td><a th:text="${lecture.name}"
-							th:href="@{'/tutorial/' + ${lecture.id}}"></a></td>
+							th:href="@{'/tutorial/(id=)' + ${lecture.id}+')'}"></a></td>
 						<td th:text="${lecture.description}"></td>
 					</tr>
 				</tbody>
