--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -16,7 +16,8 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" th:href="@{/}" href="/">JTutor <span class="glyphicon glyphicon-home"></span></a>
+				<a class="navbar-brand" th:href="@{/}" href="/">JTutor <span
+					class="glyphicon glyphicon-home"></span></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar">
@@ -67,14 +68,6 @@
 			<!--/span-->
 
 			<div class="col-sm-9 col-md-10 main">
-
-				<!--toggle sidebar button-->
-				<p class="visible-xs">
-					<button type="button" class="btn btn-primary btn-xs"
-						data-toggle="offcanvas">
-						<i class="glyphicon glyphicon-chevron-left"></i>
-					</button>
-				</p>
 
 				<div id="styled" layout:fragment="content" class="content-fragment">
 					<!-- CONTENT GOES HERE -->
