--- a/src/main/resources/templates/quiz/question.html
+++ b/src/main/resources/templates/quiz/question.html
@@ -29,16 +29,17 @@
 				<form class="form-horizontal" th:object="${answerForm}"
 					th:action="@{'/quiz/' + ${quest.id} + '/question/' + ${questionNumber}}"
 					method="post">
-					<input type="hidden" th:field="*{id}" /> <input type="hidden"
-						th:field="*{userId}" /><input type="hidden" th:field="*{questId}" />
-					<input type="hidden" th:field="*{questionId}" />
+					<input type="hidden" th:field="*{id}" readonly /> <input
+						type="hidden" th:field="*{userId}" readonly /><input
+						type="hidden" th:field="*{questId}" readonly /> <input
+						type="hidden" th:field="*{questionId}" readonly />
 
 					<div class="container form-group"
 						th:each="answer, answerStat : *{answers}">
 						<input type="hidden"
-							th:field="*{answers[__${answerStat.index}__].id}" /> <input
+							th:field="*{answers[__${answerStat.index}__].id}" readonly /> <input
 							type="hidden"
-							th:field="*{answers[__${answerStat.index}__].value}" />
+							th:field="*{answers[__${answerStat.index}__].value}" readonly />
 						<div class="checkbox">
 							<input th:id="${answerStat.index}" type="checkbox"
 								th:field="*{answers[__${answerStat.index}__].state}" /> <label
