--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -22,8 +22,7 @@
 				class="form-control middle" th:placeholder="#{first_name}" /> <input
 				type="text" th:field="*{lastName}" class="form-control bottom"
 				th:placeholder="#{last_name}" /> <input type="hidden"
-				th:field="*{username}" readonly="readonly" /> <input type="hidden"
-				th:field="*{id}" readonly="readonly" />
+				th:field="*{username}" /> <input type="hidden" th:field="*{id}" />
 
 			<button class="btn btn-lg btn-primary btn-block" type="submit"
 				th:text="#{save}"></button>
