--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<form class="form-signin" th:action="@{/user/edit}"
+		<form class="form-signin" th:action="@{/user/edit/${id}}"
 			th:object="${user}" method="post">
 			<h2 class="form-signin-heading"
 				th:text="#{edit} + ' ' + ${user.username}"></h2>
@@ -21,8 +21,7 @@
 			<input type="text" th:field="*{firstName}"
 				class="form-control middle" th:placeholder="#{first_name}" /> <input
 				type="text" th:field="*{lastName}" class="form-control bottom"
-				th:placeholder="#{last_name}" /> <input type="hidden"
-				th:field="*{username}" /> <input type="hidden" th:field="*{id}" />
+				th:placeholder="#{last_name}" />
 
 			<button class="btn btn-lg btn-primary btn-block" type="submit"
 				th:text="#{save}"></button>
