--- a/src/main/resources/templates/admin/lectures.html
+++ b/src/main/resources/templates/admin/lectures.html
@@ -72,7 +72,8 @@
 					</div>
 				</div>
 				<div>
-					<button type="submit" class="btn btn-primary" th:text="#{submit}"></button>
+					<button type="submit" class="btn btn-primary"
+						th:if="${isUserHasAccess}" th:text="#{submit}"></button>
 				</div>
 			</form>
 		</div>
