--- a/src/main/resources/templates/admin/lectures.html
+++ b/src/main/resources/templates/admin/lectures.html
@@ -20,13 +20,8 @@
 				</thead>
 				<tbody>
 					<tr th:each="lecture : ${lectures}">
-						<td
-							th:if="${usersService.getLoggedInUser().isAdmin()} or ${usersService.getLoggedInUser().getId().equals(lecture.getCreatorId())}"><a
-							th:text="${lecture.name}"
+						<td><a th:text="${lecture.name}"
 							th:href="@{'/lecture/' + ${lecture.id + '/edit'}}"></a></td>
-						<td
-							th:unless="${usersService.getLoggedInUser().isAdmin()} or ${usersService.getLoggedInUser().getId().equals(lecture.getCreatorId())}"
-							th:text="${lecture.name}"></td>
 						<td th:text="${lecture.description}"></td>
 						<td><a th:href="@{'/lecture/' + ${lecture.id + '/delete/'}}"
 							th:if="${usersService.getLoggedInUser().isAdmin()} or ${usersService.getLoggedInUser().getId().equals(lecture.getCreatorId())}"
