--- a/src/main/resources/templates/admin/lectures.html
+++ b/src/main/resources/templates/admin/lectures.html
@@ -20,8 +20,13 @@
 				</thead>
 				<tbody>
 					<tr th:each="lecture : ${lectures}">
-						<td><a th:text="${lecture.name}"
+						<td
+							th:if="${usersService.getLoggedInUser().isAdmin()} or ${usersService.getLoggedInUser().getId().equals(lecture.getCreatorId())}"><a
+							th:text="${lecture.name}"
 							th:href="@{'/lecture/' + ${lecture.id + '/edit'}}"></a></td>
+						<td
+							th:unless="${usersService.getLoggedInUser().isAdmin()} or ${usersService.getLoggedInUser().getId().equals(lecture.getCreatorId())}"
+							th:text="${lecture.name}"></td>
 						<td th:text="${lecture.description}"></td>
 						<td><a th:href="@{'/lecture/' + ${lecture.id + '/delete/'}}"
 							th:if="${usersService.getLoggedInUser().isAdmin()} or ${usersService.getLoggedInUser().getId().equals(lecture.getCreatorId())}"
@@ -32,10 +37,10 @@
 			</table>
 		</div>
 		<div class="container">
-			<h2 th:text="#{lecture_form}"></h2>
 			<form class="form-horizontal" th:object="${lectureForm}"
 				th:action="@{/lecture/add}" method="post">
 				<input type="hidden" th:field="*{id}" />
+				<h2 th:text="#{lecture_form}"></h2>
 				<div class="form-group">
 					<label class="col-sm-2 control-label" th:text="#{name} + ':'"></label>
 					<div class="col-sm-10">
